// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:results:ServicesButton matches the snapshot when format is desktop 1`] = `
<button
  className="sc-bdVaJa kLvpkp"
  format="desktop"
  onClick={[Function]}
>
  Community Law Services
</button>
`;

exports[`components:results:ServicesButton matches the snapshot when format is mobile 1`] = `
<button
  className="sc-bdVaJa iVbhnM"
  format="mobile"
  onClick={[Function]}
>
  Community Law Services
</button>
`;

exports[`components:results:ServicesButton matches the snapshot when format is tablet 1`] = `
<button
  className="sc-bdVaJa iVbhnM"
  format="tablet"
  onClick={[Function]}
>
  Community Law Services
</button>
`;
